leptos_macro/tests/view/57_children_only_missing.stderr
error[E0277]: component `Inner` requires children
  --> tests/view/57_children_only_missing.rs:11:14
   |
11 |             <Inner></Inner>
   |              ^^^^^ children required
   |
   = help: the trait `required_Inner_children` is not implemented for `leptos::component::Absent`
   = note: add child elements between the opening and closing tags
note: required by a bound in `Inner::PresenceBuilder::<(__F0,)>::require_props`
  --> tests/view/57_children_only_missing.rs:16:1
   |
16 | #[component]
   | ^^^^^^^^^^^^ required by this bound in `PresenceBuilder::<(__F0,)>::require_props`
   = note: this error originates in the attribute macro `component` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: the method `check_missing` exists for struct `Inner::PresenceBuilder<(leptos::component::Absent,)>`, but its trait bounds were not satisfied
  --> tests/view/57_children_only_missing.rs:11:14
   |
11 |             <Inner></Inner>
   |              ^^^^^ method cannot be called due to unsatisfied trait bounds
...
16 | #[component]
   | ------------ method `check_missing` not found for this struct
   |
  ::: $WORKSPACE/leptos/src/component.rs
   |
   | pub struct Absent;
   | ----------------- doesn't satisfy `leptos::component::Absent: required_Inner_children`
   |
note: trait bound `leptos::component::Absent: required_Inner_children` was not satisfied
  --> tests/view/57_children_only_missing.rs:16:1
   |
16 | #[component]
   | ^^^^^^^^^^^^
   = note: this error originates in the attribute macro `component` (in Nightly builds, run with -Z macro-backtrace for more info)
